# Sentinel

./: .dockerignore  .gitignore  .sentinelignore  Dockerfile  README.md  SENTINEL_REVIEW.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: architecture.md
sentinel/: __init__.py  config.py  orchestrator.py
sentinel/ai/: __init__.py  client.py  prompts.py
sentinel/analysis/: __init__.py  context.py  manifest.py
sentinel/cli/: __init__.py  config.py  ignore.py  scan.py
sentinel/reporting/: __init__.py  console.py  html.py
sentinel/reporting/templates/: report.html
sentinel/scanners/: __init__.py  base.py  semgrep.py  trivy.py
tests/: test_ai_client.py  test_config.py  test_context.py  test_orchestrator.py  test_scanners.py
tools/: installer.py
